# agente-v2

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.v2  README.md  compose.v2.yaml  pyproject.toml
characterization/: README.md  harness.py
config/: cerebro_faq.yaml  v2_luna_system_prompt.txt
phase8_release/: __init__.py  candidate_pair.py  evidence_store.py  graph_scan.py  red_provenance.py
reservation_boundary/: __init__.py  authority.py  conversation.py  coordinator.py  dispatch.py  effects.py  faults.py  legacy_state.py  mutations.py  properties.py  public_dispatch.py  qualification.py  reads.py  sandbox.py  schema.py  serialization.py  shadow.py  sqlite_store.py  types.py  worker_store.py
reservation_confirmation/: README.md  __init__.py  binding.py  classifier.py  presentation.py  properties.py  renderer.py  types.py
reservation_domain/: README.md  __init__.py  properties.py  reducer.py  serialization.py  signature.py  types.py
reservation_execution/: README.md  __init__.py  adapter.py  outbox.py  projection.py  properties.py  reconciliation.py  schema.py  sqlite_store.py  types.py  worker.py
reservation_followup/: __init__.py  handoff.py  payment.py  projection.py  properties.py  reconciliation.py  schema.py  serialization.py  sqlite_store.py  types.py  workers.py
reservation_lookup/: README.md  __init__.py  _common.py  bokun.py  cloudbeds.py  identity.py  properties.py  selection.py  types.py
scripts/: build_phase7_wheel.py  capture_phase7_runtime.py  check_fasttrack_boundaries.py  generate_phase1_reports.py  generate_phase2_matrix.py  (+36 more)
(+555 files in other folders)
