[project]
name = "chapada-reservation-kernel"
version = "0.8.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
runtime = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.0",
  "cryptography>=42.0.0",
]
dev = ["pytest>=8.0.0"]

[tool.phase7-wheel]
packages = [
  "reservation_domain",
  "reservation_lookup",
  "reservation_confirmation",
  "reservation_execution",
  "reservation_followup",
  "reservation_boundary",
]

[tool.v2-fasttrack]
packages = [
  "v2_contracts",
  "v2_application",
  "v2_adapters",
  "v2_host",
]
